fix Ui issues_all

--- a/src/app/components/auth/account-settings/orders/orders.component.html
+++ b/src/app/components/auth/account-settings/orders/orders.component.html
@@ -1,4 +1,4 @@
-<section class="account-page grid-checkout content-spacer-top">
+<section class="account-page grid-checkout orderspge content-spacer-top">
     <div class="container">
         <div class="row">
             <div class="col-sm-8 account-paged  col-lg-push-8">
@@ -108,7 +108,7 @@
 
                                     </ng-template>
                                 </ngb-panel>
-                                <ngb-panel id="order-listing">
+                                <ngb-panel id="order-listing1">
                                     <ng-template ngbPanelTitle>
 
                                         <div class="order-list-title">
@@ -209,7 +209,7 @@
 
                                     </ng-template>
                                 </ngb-panel>
-                                <ngb-panel id="order-listing">
+                                <ngb-panel id="order-listing2">
                                     <ng-template ngbPanelTitle>
 
                                         <div class="order-list-title">
@@ -310,7 +310,7 @@
 
                                     </ng-template>
                                 </ngb-panel>
-                                <ngb-panel id="order-listing">
+                                <ngb-panel id="order-listing3">
                                     <ng-template ngbPanelTitle>
 
                                         <div class="order-list-title">
@@ -411,7 +411,7 @@
 
                                     </ng-template>
                                 </ngb-panel>
-                                <ngb-panel id="order-listing">
+                                <ngb-panel id="order-listing4">
                                     <ng-template ngbPanelTitle>
 
                                         <div class="order-list-title">
