--- a/src/app/components/auth/account-settings/payments/payments.component.html
+++ b/src/app/components/auth/account-settings/payments/payments.component.html
@@ -12,7 +12,7 @@
 
                             <ngb-accordion activeIds="">
 
-                                <ngb-panel id="promo-sidebar1">
+                                <ngb-panel id="primarycard">
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1 profile-section">
                                             <h4> Primary Card</h4>
@@ -49,7 +49,7 @@
                                     </ng-template>
                                 </ngb-panel>
 
-                                <ngb-panel id="promos-sidebar1">
+                                <ngb-panel id="newcard">
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1 profile-section">
                                             <h4>Add New Card</h4>
@@ -221,7 +221,7 @@
                                 </ngb-panel>
 
 
-                                <ngb-panel id="promod-sidebar1">
+                                <ngb-panel id="secondarycard">
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1 profile-section ">
                                             <h4> Secondary Card</h4>
@@ -268,9 +268,8 @@
                                 <h4>Your Wallets</h4>
                             </div>
 
-                            <ngb-accordion activeIds=" ">
-
-                                <ngb-panel id="promo-sidebar1 ">
+                            <ngb-accordion>
+                                <ngb-panel id="paypaladd">
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1 profile-section ">
                                             <h4>PayPal</h4>
@@ -287,7 +286,6 @@
                                         </div>
                                     </ng-template>
                                     <ng-template ngbPanelContent>
-
                                         <div class="emailbtns paypall">
                                             <div class="saves paypal">
                                                 <a href="#"> <button class="save-btn"> <i> PayPal</i></button></a>
@@ -295,23 +293,9 @@
                                             <div class="cancles">
                                                 <a href="#"> <button class="cancle-btn">Disconnect PayPal</button></a>
                                             </div>
-
-
-
-
                                         </div>
-
                                     </ng-template>
                                 </ngb-panel>
-
-
-
-
-
-
-
-
-
                             </ngb-accordion>
                         </div>
                     </div>
