--- a/src/styles.css
+++ b/src/styles.css
@@ -629,10 +629,12 @@ section.account-page.profile-page.grid-checkout div#basic1-header {
 section.account-page.profile-page.grid-checkout div#contactInfo-header {
     padding: 0px;
 }
+
 section.account-page.profile-page .card {
     margin-bottom: 30px;
     border-bottom: 1px solid #80808045;
 }
+
 .panel-stepbar #checkoutstep1-header.card-header .btn[aria-expanded="true"]:focus,
 .panel-stepbar #checkoutstep2-header.card-header .btn[aria-expanded="true"]:focus,
 .panel-stepbar #checkoutstep3-header.card-header .btn[aria-expanded="true"]:focus,
@@ -1841,7 +1843,16 @@ section.account-page.profile-page ngb-accordion.accordion.panel-stepbar .card {
 }
 
 .account-paged .card-body {
-    padding: 0px 32px;
+    padding: 15px 32px 0;
+}
+
+.account-paged .card button[aria-expanded="true"] span.arrow-stepp {
+    right: 13px;
+    top: 10px;
+}
+
+.account-paged .card button[aria-expanded="true"] {
+    position: relative;
 }
 
 .account-paged .special-field.dataempty input:focus~label,
@@ -1853,6 +1864,31 @@ section.account-page.profile-page ngb-accordion.accordion.panel-stepbar .card {
 .account-paged .special-field.datafilled input~label {
     top: -10px !important;
     left: 18px;
+}
+
+.custom-control.custom-checkbox.mycheckbox label.custom-control-label {
+    left: 24px;
+    top: 0px !important;
+}
+
+.signoutBtn {
+    color: #1cb1c5;
+    font-family: 'g-medium';
+}
+
+.account-paged .card button[aria-expanded="false"] {
+    position: relative;
+}
+
+.account-paged .card button[aria-expanded="false"] span.arrow-stepp {
+    top: 20px;
+    right: 12px;
+}
+
+.account-paged .card button[aria-expanded="false"] span.arrow-stepp svg,
+.account-paged .card button[aria-expanded="true"] span.arrow-stepp svg {
+    width: 15px;
+    height: 15px;
 }
 
 
@@ -1868,6 +1904,15 @@ section.account-page.profile-page ngb-accordion.accordion.panel-stepbar .card {
 
 
 /* Orders CSS */
+
+section.account-page.grid-checkout.orderspge button[aria-expanded="false"] span.arrow-stepp.ng-star-inserted {
+    top: 44px;
+}
+
+section.account-page.grid-checkout.orderspge button[aria-expanded="true"] span.arrow-stepp.ng-star-inserted {
+    bottom: -31px !important;
+    top: auto !important;
+}
 
 ngb-accordion.order-listing ul.ordered-previews {
     list-style-type: none;
@@ -2088,14 +2133,38 @@ ngb-accordion.accordion.order-listing div#order-listing-header button:focus {
 .address-page button.btn.btn-link.ng-star-inserted:focus {
     box-shadow: none;
 }
+
 .card.ng-star-inserted button {
     text-decoration: none;
 }
 
+
 /* payment page css */
+
+.paymentPage .card button[aria-expanded="false"] span.arrow-stepp svg,
+.paymentPage .card button[aria-expanded="true"] span.arrow-stepp svg {
+    width: 15px;
+    height: 15px;
+}
 
 .paymentPage button.btn.btn-link.collapsed.ng-star-inserted {
     padding: 13px 9px;
+}
+
+ngb-accordion.accordion .card-header {
+    border: none;
+}
+
+
+/* Subscriptions CSS */
+
+section.account-page.grid-checkout.Subscription-page button[aria-expanded="false"] span.arrow-stepp.ng-star-inserted {
+    top: 44px;
+}
+
+section.account-page.grid-checkout.Subscription-page button[aria-expanded="true"] span.arrow-stepp.ng-star-inserted {
+    bottom: -31px !important;
+    top: auto !important;
 }
 
 
@@ -2517,6 +2586,7 @@ ngb-accordion.accordion.order-listing div#order-listing-header button:focus {
         font-size: 12px !important;
     }
 }
+
 button.btn.btn-link.ng-star-inserted {
     border-radius: unset;
 }
