--- a/src/app/components/auth/account-settings/account-settings.component.html
+++ b/src/app/components/auth/account-settings/account-settings.component.html
@@ -215,7 +215,7 @@
                                                                             </div>
                                                                             <div class="emailbtns">
                                                                                 <div class="cancles">
-                                                                                    <a href="#"> <button class="cancle-btn">Cancle</button></a>
+                                                                                    <a href="#"> <button class="cancle-btn">Cancel</button></a>
                                                                                 </div>
                                                                                 <div class="saves">
                                                                                     <a href="#"> <button class="save-btn">Save</button></a>
@@ -270,7 +270,7 @@
                                                                                 </div>
                                                                                 <div class="emailbtns">
                                                                                     <div class="cancles">
-                                                                                        <a href="#"> <button class="cancle-btn">Cancle</button></a>
+                                                                                        <a href="#"> <button class="cancle-btn">Cancel</button></a>
                                                                                     </div>
                                                                                     <div class="saves">
                                                                                         <a href="#"> <button class="save-btn">Save</button></a>
