--- a/src/app/components/auth/account-settings/profile/profile.component.html
+++ b/src/app/components/auth/account-settings/profile/profile.component.html
@@ -35,7 +35,7 @@
                                             </div>
                                             <div class="emailbtns">
                                                 <div class="cancles">
-                                                    <a href="#"> <button class="cancle-btn">Cancel</button></a>
+                                                    <a data-toggle="collapse" href="#promo-sidebar1" role="button" aria-expanded="false" aria-controls="promo-sidebar1"> <button class="cancle-btn">Cancel</button></a>
                                                 </div>
                                                 <div class="saves">
                                                     <a href="#"> <button class="save-btn" (click)="submit('First Name',UserDetails.firstName)">Save</button></a>
@@ -72,7 +72,7 @@
                                             </div>
                                             <div class="emailbtns">
                                                 <div class="cancles">
-                                                    <a href="#"> <button class="cancle-btn">Cancel</button></a>
+                                                    <a data-toggle="collapse" href="#promo-sidebar" role="button" aria-expanded="false" aria-controls="promo-sidebar"> <button class="cancle-btn">Cancel</button></a>
                                                 </div>
                                                 <div class="saves">
                                                     <a href="#"> <button class="save-btn" (click)="submit('login Name',UserDetails.loginName)">Save</button></a>
@@ -114,7 +114,7 @@
                                                             </div>
                                                             <div class="emailbtns">
                                                                 <div class="cancles">
-                                                                    <a href="#"> <button class="cancle-btn">Cancel</button></a>
+                                                                    <a data-toggle="collapse" href="#otp-sidebar2" role="button" aria-expanded="false" aria-controls="otp-sidebar2"> <button class="cancle-btn">Cancel</button></a>
                                                                 </div>
                                                                 <div class="saves">
                                                                     <a href="#"> <button class="save-btn" (click)="submit('password',UserDetails.LoginPassword)">Save</button></a>
